<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Reto 3: Tic-Tac-Toe</string>
    <string name="game_title">Tic-Tac-Toe</string>
    <string name="game_subtitle">Reto 3 Android</string>
    <string name="first_human">You start this round.</string>
    <string name="first_computer">Android starts this round.</string>
    <string name="turn_human">Your turn.</string>
    <string name="turn_computer">Android is thinking...</string>
    <string name="result_tie">It\'s a tie.</string>
    <string name="result_human_wins">You won!</string>
    <string name="result_computer_wins">Android won!</string>
    <string name="new_game">New Game</string>
    <string name="score_human">You: %1$d</string>
    <string name="score_ties">Ties: %1$d</string>
    <string name="score_android">Android: %1$d</string>
    <string name="content_board_cell">Board cell</string>
</resources>
